traversal.snake.Snake.scala.error
Compilation error:
Snake:22: error: ';' expected but 'return' found.
      }return false
       ^Snake:28: error: ';' expected but 'return' found.
      }return false
       ^